<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gov Checker</string>
    <string name="res_display_position">Position:</string>
    <string name="res_display_house">House</string>
    <string name="res_display_seat">Seat</string>
    <string name="res_display_dep">Date Entered Parliament</string>
    <string name="res_hansard_display_button">View Reps Hansard Appearances</string>
    <string name="res_display_party">Party</string>
    <string name="res_display_rep_display_desc">Picture of Representative</string>
    <string name="res_repsearch_button">Find Your Rep</string>
    <string name="res_display_attendance">Attendance</string>
    <string name="share">Share</string>
    <string name="res_voteforus_display_button">View Rep Activity</string>
    <string name="activity_display_attendance">Attendance</string>
    <string name="activity_display_rebellions">Rebellions</string>
</resources>
