<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal" >

<TextView 
	android:text="" 
	android:id="@+id/NameTextView" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	style="@style/RepName"
	android:gravity="center_vertical|center_horizontal" 
	android:layout_centerInParent="false" 
	android:layout_centerHorizontal="true">
	</TextView>
		<TableLayout  
	android:layout_below="@+id/RepImage" 
	android:layout_height="wrap_content" 
	android:id="@+id/TableLayout01" 
	android:layout_width="fill_parent"
	android:paddingLeft="10dp"
	>

            <TableRow
                    android:layout_height="wrap_content"
                    android:id="@+id/PositionRow"
                    android:layout_width="fill_parent">

                <TextView
                        style="@style/RepLabel"
                        android:layout_weight="0.40"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:layout_width="0dp"
                        android:id="@+id/PosLabel"
                        android:text="@string/res_display_position"/>

                <TextView
                        android:layout_weight="0.60"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:id="@+id/PosContent"/>
            </TableRow>

           <TableRow  
		android:layout_height="wrap_content" 
		android:id="@+id/HouseRow" 
		android:layout_width="fill_parent">

               

		<TextView  
			android:layout_height="wrap_content" 
			android:visibility="visible" 
			android:layout_width="0dp"
			android:layout_weight="0.40" 
			android:id="@+id/HouseLabel" 
			android:text="@string/res_display_house"
			style="@style/RepLabel">
			</TextView>
		<TextView  
			android:layout_height="wrap_content" 
			android:layout_width="0dp"
			android:layout_weight="0.60" 
			android:id="@+id/HouseContent">
			</TextView>
		</TableRow>
		<TableRow   
		android:layout_height="wrap_content" 
		android:id="@+id/DivisionRow" 
		android:layout_width="fill_parent">
		<TextView 
			android:layout_height="wrap_content" 
			android:visibility="visible" 
			android:layout_width="0dp"
			android:layout_weight="0.40" 
			android:id="@+id/DivisionLabel" 
			android:text="@string/res_display_seat"
			style="@style/RepLabel">
			</TextView>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="0dp"
			android:layout_weight="0.60" 
			android:id="@+id/DivisionContent">
			</TextView>
		</TableRow>
		<TableRow   
		android:layout_height="wrap_content" 
		android:id="@+id/PartyRow" 
		android:layout_width="fill_parent">
		<TextView   
			android:layout_height="wrap_content" 
			android:visibility="visible" 
			android:layout_width="0dp"
			android:layout_weight="0.40" 
			android:id="@+id/PartyLabel" 
			android:text="@string/res_display_party"
			style="@style/RepLabel">
			</TextView>
		<TextView  
			android:layout_height="wrap_content" 
			android:layout_width="0dp"
			android:layout_weight="0.60" 
			android:id="@+id/PartyContent">
			</TextView>
		</TableRow>
		<TableRow   
		android:layout_height="wrap_content" 
		android:id="@+id/DateRow" 
		android:layout_width="fill_parent">
		<TextView   
			android:layout_height="wrap_content" 
			android:visibility="visible" 
			android:layout_width="0dp"
			android:layout_weight="0.40" 
			android:id="@+id/DateLabel" 
			android:text="@string/res_display_dep"
			style="@style/RepLabel">
			</TextView>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="0dp"
			android:layout_weight="0.60" 
			android:id="@+id/DateContent">
			</TextView>
		</TableRow>
		 <TableRow
                    android:layout_height="wrap_content"
                    android:id="@+id/AttendanceRow"
                    android:layout_width="fill_parent">

                <TextView
                        style="@style/RepLabel"
                        android:layout_weight="0.40"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:layout_width="0dp"
                        android:id="@+id/AttendanceLabel"
                        android:text="@string/activity_display_attendance"/>

                <TextView
                        android:layout_weight="0.60"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:id="@+id/AttendanceContent"/>
            </TableRow>
		<TableRow  
		android:layout_height="wrap_content" 
		android:id="@+id/RebellionsRow" 
		android:layout_width="fill_parent">
		<TextView  
			android:layout_height="wrap_content" 
			android:visibility="visible" 
			android:layout_width="0dp"
			android:layout_weight="0.40" 
			android:id="@+id/RebellionsLabel" 
			android:text="@string/activity_display_rebellions"
			style="@style/RepLabel">
			</TextView>
		<TextView  
			android:layout_height="wrap_content" 
			android:layout_width="0dp"
			android:layout_weight="0.60" 
			android:id="@+id/RebellionsContent">
			</TextView>
		</TableRow>
		<TableRow   
        android:layout_height="wrap_content" 
        android:id="@+id/HansardButtonRow" 
        android:layout_width="fill_parent">

		<ImageView
		    android:id="@+id/hansardSearchImage"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/res_hansardsearch_image"
		    android:padding="5dp"
		    android:src="@drawable/hansard_hor" />

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/res_voting_image"
		    android:padding="5dp"
		    android:src="@drawable/vote" />

		</TableRow>

		

		<TableRow   
        android:layout_height="wrap_content" 
        android:id="@+id/VoteHistoryButtonRow" 
        android:layout_width="fill_parent">

        </TableRow>
		
	</TableLayout>
		<ImageView
		    android:id="@+id/RepImage"
		    android:layout_width="150dp"
		    android:layout_height="200dp"
		    android:layout_below="@+id/NameTextView"
		    android:layout_centerHorizontal="true"
		    android:contentDescription="@string/res_display_rep_display_desc"
		    android:scaleType="fitXY" />

</RelativeLayout>
